--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="welcome">
+    <div class="wrapper">
+        <!-- <div class="welcome">
             <span>Welcome to our store </span>
-        </div>
-  <header>
+        </div> -->
+  <header class="header">
     <div class="logo">
         <a href="#">
-            <img src="./img/logo/image(1244).png" alt="">
+            <!-- <img src="./img/logo/logo.png" alt="" style="width: 100;"> -->
             <span>Q&T.vn</span>
         </a>
     </div>
@@ -35,11 +35,10 @@
         </ul>
        <div class="search-cart">
         <div class="search">
-            <!-- <input type="text" placeholder="Search"> -->
-            <i class="fa fa-search"></i>
+            <a href="#"><i class="fa fa-search"></i></a>
         </div>
         <div class="cart">
-            <i class="fa fa-cart-shopping"></i>
+            <a href="#"><i class="fa fa-cart-shopping"></i></a>
         </div>
        </div>
       </nav>
@@ -51,20 +50,148 @@
    </ul>
    
   </header>
-  
-  <main>
-
-  </main>
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./img/products/car1.jpg" class="d-block" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./img/products/car2.png" class="d-block" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./img/products/car3.jpg " class="d-block" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <div class="new-product ">
+      <div class="headline">
+        <h3>New Product</h3>
+      </div>
+      <div class="row d-flex">
+        <div class="card">
+          <div class="card-body">
+            <img src="./img/products/car3.jpg"class="w-100"  alt="">
+            <div class="by-now">
+              <a href="#">By now</a>
+            </div>
+          </div>
+          <div class="card-content">
+            <p>Nike</p>
+          <span>30$</span>
+          </div>
+        </div>
+          <div class="card">
+            <div class="card-body">
+              <img src="./img/products/car3.jpg"class="w-100"  alt="">
+              <div class="by-now">
+                <a href="#">By now</a>
+              </div>
+            </div>
+            <div class="card-content">
+              <p>Nike</p>
+            <span>30$</span>
+            </div>
+          </div>
+        <div class="card">
+          <div class="card-body">
+            <img src="./img/products/car3.jpg"class=""  alt="">
+            <div class="by-now">
+              <a href="#">By now</a>
+            </div>
+          </div>
+          <div class="card-content">
+            <p>Nike</p>
+          <span>30$</span>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <img src="./img/products/car3.jpg"class=""  alt="">
+            <div class="by-now">
+              <a href="#">By now</a>
+            </div>
+          </div>
+          <div class="card-content">
+            <p>Nike</p>
+          <span>30$</span>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <img src="./img/products/car3.jpg"class=""  alt="">
+            <div class="by-now">
+              <a href="#">By now</a>
+            </div>
+          </div>
+          <div class="card-content">
+            <p>Nike</p>
+          <span>30$</span>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <img src="./img/products/car3.jpg"class=""  alt="">
+            <div class="by-now">
+              <a href="#">By now</a>
+            </div>
+          </div>
+          <div class="card-content">
+            <p>Nike</p>
+          <span>30$</span>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <img src="./img/products/car3.jpg"class=""  alt="">
+            <div class="by-now">
+              <a href="#">By now</a>
+            </div>
+          </div>
+          <div class="card-content">
+            <p>Nike</p>
+          <span>30$</span>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <img src="./img/products/car3.jpg"class=""  alt="">
+            <div class="by-now">
+              <a href="#">By now</a>
+            </div>
+          </div>
+          <div class="card-content">
+            <p>Nike</p>
+          <span>30$</span>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <img src="./img/products/car2.png"class=""  alt="">
+            <div class="by-now">
+              <a href="#">By now</a>
+            </div>
+          </div>
+          <div class="card-content">
+            <p>Nike</p>
+          <span>30$</span>
+          </div>
+        </div>
+      </div>
+    </div>
   <footer>
   </footer>
 </div>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-  </script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-  </script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 
 </html>
